--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.17",
+        "@tanstack/query-core": "^4.29.5",
+        "@tanstack/react-query": "^4.29.5",
         "buzzingpixel-mission-control-frontend-core": "file:../frontend-core",
         "react": "^18.2.0",
-        "react-router-dom": "^6.11.0"
+        "react-router-dom": "^6.11.0",
+        "zod": "^3.21.4"
     }
 }
