--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@tanstack/react-query": "^4.29.5",
         "buzzingpixel-mission-control-frontend-core": "file:../frontend-core",
         "react": "^18.2.0",
+        "react-hook-form": "^7.43.9",
         "react-router-dom": "^6.11.0",
         "zod": "^3.21.4"
     }
