--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
     "license": "proprietary",
     "require": {
         "php": "^8.2",
+        "ext-pdo": "*",
         "buzzingpixel/mission-control-backend-core": "dev-main",
-        "buzzingpixel/mission-control-idp": "dev-main"
+        "buzzingpixel/mission-control-idp": "dev-main",
+        "cocur/slugify": "^4.3"
     },
     "require-dev": {
         "doctrine/coding-standard": "^11.0.0",
