--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "yargs": "^17.7.1"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.17",
         "@tanstack/query-core": "^4.29.5",
         "@tanstack/react-query": "^4.29.5",
