--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "ext-redis": "*",
         "buzzingpixel/mission-control-backend-core": "dev-main",
         "buzzingpixel/mission-control-idp": "dev-main",
-        "cocur/slugify": "^4.3"
+        "cocur/slugify": "^4.3",
+        "guzzlehttp/guzzle": "^7.5",
+        "league/pipeline": "^1.0"
     },
     "require-dev": {
         "doctrine/coding-standard": "^11.0.0",
