WIP: URL notifications

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "bin-compat": "full",
         "sort-packages": true,
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true
         }
     }
 }
