--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@tanstack/query-core": "^4.29.5",
         "@tanstack/react-query": "^4.29.5",
         "buzzingpixel-mission-control-frontend-core": "file:../frontend-core",
+        "locutus": "^2.0.16",
         "react": "^18.2.0",
         "react-hook-form": "^7.43.9",
         "react-router-dom": "^6.11.0",
